--- a/index.html
+++ b/index.html
@@ -33,8 +33,27 @@
     </header>
 
     <nav class="navegacao">
-      
+      <ul class="menu">
+        <li class="lista-menu"><a href="#">Produtos</a></li>
+        <li class="lista-menu"><a href="#">Ocasiões</a></li>
+        <li class="lista-menu"><a href="#">Loja Online</a></li>
+        <li class="lista-menu"><a href="#">Promoções</a></li>
+      </ul>
     </nav>
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/banner.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Third slide">
+          </div>
+        </div>
+    </div>
     
 </body>
 </html>
