Criação do menu dos produtos em destaque

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
       <section class="secao-destaques">
         <div class="destaques-menu">
           <p>Produtos em destaque</p>
+          <ul>
+            <li class="lista-destaques-menu"><a href="#">Buquês</a></li>
+            <li class="lista-destaques-menu"><a href="#">Arranjos</a></li>
+            <li class="lista-destaques-menu"><a href="#">Cestas</a></li>
+          </ul>
         </div>
         <!-- <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
           <div class="carousel-inner">
