--- a/WebSiteFloricultura/index.html
+++ b/WebSiteFloricultura/index.html
@@ -1,83 +1,104 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Importanto as fontes utilizadas  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Federo&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Federo&family=Montserrat:wght@600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Gentium+Book+Basic"4/>
-    <!-- Importando o bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <!-- Importando os estilos CSS -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <title>Floricultura Equador</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Importanto as fontes utilizadas  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Federo&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Federo&family=Montserrat:wght@600;800&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Gentium+Book+Basic" 4 />
+  <!-- Importando o bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <!-- Importando os estilos CSS -->
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <title>Floricultura Equador</title>
 </head>
+
 <body>
-    <header class="cabecalho">
-        <img src="img/LogoFloricultura.png">
-        <h1>Floricultura Equador</h1>
+  <!-- Cabeçalho do site -->
+  <header class="cabecalho">
+    <img src="img/LogoFloricultura.png">
+    <h1>Floricultura Equador</h1>
 
-        <section class="inputPesquisar">
-            <input type="text" id="txtPesquisa" placeholder="Encontre seu produto"/>
-            <div class="caixaBotao">
-                <img src="img/IconeLupa.png" id="btnPesquisa" alt="Pesquisar"/>
-            </div>
-        </section>
-
-       <button class="botaoLogin">Login</button>
-       <button class="botaoCadastro">Cadastra-se</button>
-    </header>
-
-    <nav class="navegacao">
-      <ul class="menu">
-        <li class="lista-menu"><a href="#">Produtos</a></li>
-        <li class="lista-menu"><a href="#">Ocasiões</a></li>
-        <li class="lista-menu"><a href="#">Loja Online</a></li>
-        <li class="lista-menu"><a href="#">Promoções</a></li>
-      </ul>
-    </nav>
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-interval="2500" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <section class="inputPesquisar">
+      <input type="text" id="txtPesquisa" placeholder="Encontre seu produto" />
+      <div class="caixaBotao">
+        <img src="img/IconeLupa.png" id="btnPesquisa" alt="Pesquisar" />
       </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="img/1.jpg" class="d-block w-100" alt="">
-        </div>
-        <div class="carousel-item">
-          <img src="img/2.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img/3.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img/4.jpg" class="d-block w-100" alt="...">
-        </div>
+    </section>
+
+    <button class="botaoLogin">Login</button>
+    <button class="botaoCadastro">Cadastra-se</button>
+  </header>
+  <!-- Menu de navegação global do site -->
+  <nav class="navegacao">
+    <ul class="menu">
+      <li class="lista-menu"><a href="#">Produtos</a></li>
+      <li class="lista-menu"><a href="#">Ocasiões</a></li>
+      <li class="lista-menu"><a href="#">Loja Online</a></li>
+      <li class="lista-menu"><a href="#">Promoções</a></li>
+    </ul>
+  </nav>
+  <!-- Carrosel principal do site (foi utilizado Bootstrap) -->
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-interval="2500" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+        aria-label="Slide 4"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/1.jpg" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img src="img/2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="img/3.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="img/4.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
+  </div>
+  <!-- Sessão principal do site, onde irá conter os produtos em destaque e em promoção -->
+  <main>
+    <section class="secao-destaques">
+      <div class="destaques-menu">
+        <p>Produtos em destaque</p>
+        <ul>
+          <li class="lista-destaques-menu"><a href="#">Buquês</a></li>
+          <li class="lista-destaques-menu"><a href="#">Arranjos</a></li>
+          <li class="lista-destaques-menu"><a href="#">Cestas</a></li>
+        </ul>
+      </div>
+    </section>
 
-    <main>
-      <section class="secao-destaques">
-        <div class="destaques-menu">
-          <p>Produtos em destaque</p>
+      <section class="secao-promocao">
+        <div class="promocao-menu">
+          <p>Produtos em promoção</p>
           <ul>
-            <li class="lista-destaques-menu"><a href="#">Buquês</a></li>
-            <li class="lista-destaques-menu"><a href="#">Arranjos</a></li>
-            <li class="lista-destaques-menu"><a href="#">Cestas</a></li>
+            <li class="lista-promocao-menu"><a href="#">Buquês</a></li>
+            <li class="lista-promocao-menu"><a href="#">Arranjos</a></li>
+            <li class="lista-promocao-menu"><a href="#">Cestas</a></li>
           </ul>
         </div>
-        <!-- <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      </section>
+      <!-- <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="card-wrapper container-sm d-flex  justify-content-around">
@@ -164,13 +185,14 @@
             </button>
           </div>
         </div> -->
-      </section>
-    </main>
+  </main>
 
-    
-    
-    <!-- Script bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+
+  <!-- Importação do Script bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 </body>
-</html>
 
+</html>
