Adicionando estrutura HTML rodapé
Atualização

--- a/WebSiteFloricultura/index.html
+++ b/WebSiteFloricultura/index.html
@@ -186,7 +186,12 @@
           </div>
         </div> -->
   </main>
-
+  <!-- Rodapé do website -->
+  <footer class="rodape">
+    <img class="icones-rodape" src="img/iconeWhatsapp.png">
+    <img class="icones-rodape" src="img/iconeInstagram.png">
+    <img class="icones-rodape"src="img/iconeFacebook.png">
+  </footer>
 
 
   <!-- Importação do Script bootstrap -->
