Atualização cabeçalho/header

--- a/WebSiteFloricultura/index.html
+++ b/WebSiteFloricultura/index.html
@@ -46,8 +46,10 @@
 
   <!-- Cabeçalho do site -->
   <header class="cabecalho">
-    <img src="img/LogoFloricultura.png">
-    <h1>Floricultura Equador</h1>
+    <section class="logo">
+      <img src="img/LogoFloricultura.png">
+      <h1>Floricultura Equador</h1>
+    </section>
 
     <section class="inputPesquisar">
       <input type="text" id="txtPesquisa" placeholder="Encontre seu produto" />
@@ -56,8 +58,10 @@
       </div>
     </section>
 
-    <button class="botaoLogin" data-bs-toggle="modal" data-bs-target="#modalLogin">Login</button>
-    <button class="botaoCadastro" data-bs-toggle="modal" data-bs-target="#modalCadastrar" >Cadastra-se</button>
+    <section class="botoesCabecalho">
+      <button class="botaoLogin" data-bs-toggle="modal" data-bs-target="#modalLogin">Login</button>
+      <button class="botaoCadastro" data-bs-toggle="modal" data-bs-target="#modalCadastrar" >Cadastra-se</button>
+    </section>
   </header>
   <!-- Menu de navegação global do site -->
   <nav class="navegacao">
