--- a/WebSiteFloricultura/index.html
+++ b/WebSiteFloricultura/index.html
@@ -103,26 +103,42 @@
   </div>
   <!-- Sessão principal do site, onde irá conter os produtos em destaque e em promoção -->
   <main>
-    <section class="secao-destaques">
-      <div class="destaques-menu">
+    <section class="secao-promocao">
+      <div class="promocao-menu">
         <p>Produtos em Promoção</p>
         <ul>
-          <li class="lista-destaques-menu"><a href="#">Buquês</a></li>
-          <li class="lista-destaques-menu"><a href="#">Arranjos</a></li>
-          <li class="lista-destaques-menu"><a href="#">Cestas</a></li>
+          <li class="lista-promocao-menu"><a href="#">Buquês</a></li>
+          <li class="lista-promocao-menu"><a href="#">Arranjos</a></li>
+          <li class="lista-promocao-menu"><a href="#">Cestas</a></li>
         </ul>
       </div>
-      <!-- Carousel dos produtos destaques -->
+      <!-- Carousel dos produtos promocao -->
       <div id="carouselExampleControls" class="carousel carousel-dark slide" data-ride="carousel" data-interval="0"
         style="padding-top: 5px;">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="card-wrapper container-sm d-flex  justify-content-around">
               <div class="card">
-                <img src="img/Shop1Destaques.png" class="card-img-top" alt="...">
+                <img src="img/Arranjo-promocao1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Buquê tropical</h5>
-                  <h4 class="card-preco">De: <del>R$206,98</del> <br> Por: R$206,98</h4>
+                  <h4 class="card-preco">De: <del>R$140,98</del> <br> Por: R$100,98</h4>
+                  <p class="card-descricao">Um verdadeiro arco-íris de cores para a decorar o seu cantinho preferido!
+                    As texturas das plantas desidratadas dão um toque rústico aos ambientes sem perder a delicadeza e
+                    naturalidade. !</p>
+                  <div class="card-botoes">
+                    <button class="card-botaoCarrinho">
+                      <img src="img/IconeCarrinho.png">
+                    </button>
+                    <button class="card-botaoComprar">Comprar</button>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <img src="img/Arranjo-promocao2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Buquê tropical</h5>
+                  <h4 class="card-preco">De: <del>R$126,98</del> <br> Por: R$106,98</h4>
                   <p class="card-descricao">Muito bom para presentear a sua pessoa amada e lembrar o quanto ela é
                     importante, num dia comum ou numa data especial!</p>
                   <div class="card-botoes">
@@ -134,27 +150,13 @@
                 </div>
               </div>
               <div class="card">
-                <img src="img/Shop1Destaques.png" class="card-img-top" alt="...">
+                <img src="img/Arranjo-promocao3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Buquê tropical</h5>
-                  <h4 class="card-preco">De: <del>R$206,98</del> <br> Por: R$206,98</h4>
-                  <p class="card-descricao">Muito bom para presentear a sua pessoa amada e lembrar o quanto ela é
-                    importante, num dia comum ou numa data especial!</p>
-                  <div class="card-botoes">
-                    <button class="card-botaoCarrinho">
-                      <img src="img/IconeCarrinho.png">
-                    </button>
-                    <button class="card-botaoComprar">Comprar</button>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="img/Shop1Destaques.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Buquê tropical</h5>
-                  <h4 class="card-preco">De: <del>R$206,98</del> <br> Por: R$206,98</h4>
-                  <p class="card-descricao">Muito bom para presentear a sua pessoa amada e lembrar o quanto ela é
-                    importante, num dia comum ou numa data especial!</p>
+                  <h4 class="card-preco">De: <del>R$186,98</del> <br> Por: R$150,98</h4>
+                  <p class="card-descricao">Composição de flores e folhagens TROPICAIS em pote de vidro.
+                    O arranjo poderá apresentar variação de cores e flores, de acordo com a estação e disponibilidade.
+                  </p>
                   <div class="card-botoes">
                     <button class="card-botaoCarrinho">
                       <img src="img/IconeCarrinho.png">
@@ -169,12 +171,12 @@
           <div class="carousel-item">
             <div class="card-wrapper container-sm d-flex   justify-content-around">
               <div class="card">
-                <img src="img/Shop1Destaques.png" class="card-img-top" alt="...">
+                <img src="img/buque 1.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Buquê tropical</h5>
-                  <h4 class="card-preco">De: <del>R$206,98</del> <br> Por: R$206,98</h4>
-                  <p class="card-descricao">Muito bom para presentear a sua pessoa amada e lembrar o quanto ela é
-                    importante, num dia comum ou numa data especial!</p>
+                  <h4 class="card-preco">De: <del>R$250,00</del> <br> Por: R$200,00</h4>
+                  <p class="card-descricao"> Nossa criação mais diferente e exótica para presentear de forma única!
+                    Uma seleção de flores tropicais e exóticas em uma composição exclusiva com assinatura Giardini.</p>
                   <div class="card-botoes">
                     <button class="card-botaoCarrinho">
                       <img src="img/IconeCarrinho.png">
@@ -184,12 +186,13 @@
                 </div>
               </div>
               <div class="card">
-                <img src="img/Shop1Destaques.png" class="card-img-top" alt="...">
+                <img src="img/buque 2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Buquê tropical</h5>
-                  <h4 class="card-preco">De: <del>R$206,98</del> <br> Por: R$206,98</h4>
-                  <p class="card-descricao">Muito bom para presentear a sua pessoa amada e lembrar o quanto ela é
-                    importante, num dia comum ou numa data especial!</p>
+                  <h4 class="card-preco">De: <del>R$256,98</del> <br> Por: R$206,98</h4>
+                  <p class="card-descricao">As flores tropicais são famosas por sua beleza e cores vibrantes e vão muito
+                    além dos ornamentos.
+                    por isso criamos nosso buque especil para presentear quem se ama.</p>
                   <div class="card-botoes">
                     <button class="card-botaoCarrinho">
                       <img src="img/IconeCarrinho.png">
@@ -199,12 +202,11 @@
                 </div>
               </div>
               <div class="card">
-                <img src="img/Shop1Destaques.png" class="card-img-top" alt="...">
+                <img src="img/buque 3.jfif" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Buquê tropical</h5>
-                  <h4 class="card-preco">De: <del>R$206,98</del> <br> Por: R$206,98</h4>
-                  <p class="card-descricao">Muito bom para presentear a sua pessoa amada e lembrar o quanto ela é
-                    importante, num dia comum ou numa data especial!</p>
+                  <h4 class="card-preco">De: <del>R$206,98</del> <br> Por: R$146,98</h4>
+                  <p class="card-descricao"> Ideal para presentear a pessoa que se ama, com uma imensa diversidade de cores com a pra tropicalidade brasileira.</p>
                   <div class="card-botoes">
                     <button class="card-botaoCarrinho">
                       <img src="img/IconeCarrinho.png">
