Criação do grid de cards
Estrutura do grid de cards com 4 colunas e 3 linhas.

--- a/WebSiteFloricultura/index.html
+++ b/WebSiteFloricultura/index.html
@@ -50,14 +50,15 @@
     </div>
   </div>
   <!-- Modal de login do usuário -->
-  <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog  modal-dialog-centered modal-lg">
       <div class="modal-caixaGeral">
         <div class="modal-caixaApresentacao">
           <div class="apresentacao-logotipo">
             <img src="img/LogoFloricultura.png">
             <h1>Floricultura Equador</h1>
-          </div> 
+          </div>
           <div class="apresentacao-texto">
             <h2>Bem vindo</h2>
             <p>Faça login para continuar acessando a página</p>
@@ -73,10 +74,10 @@
             <img src="img/IconeSegurança.png">
           </div>
           <form class="formularioLogin">
-            <input type="email" id="loginEmail" placeholder="Email"/>
-            <input type="password" id="loginSenha" placeholder="Senha"/>
+            <input type="email" id="loginEmail" placeholder="Email" />
+            <input type="password" id="loginSenha" placeholder="Senha" />
             <a>Esqueceu a sua senha?</a>
-            <input type="submit" id="inputEnviarLogin" value="Login"/>
+            <input type="submit" id="inputEnviarLogin" value="Login" />
           </form>
           <p id="textoConectarRede">Conectar pelas redes sociais</p>
           <div class="botoesFormaLogin">
@@ -90,7 +91,7 @@
             </button>
           </div>
           <a id="textoCriarConta">Criar uma conta</a>
-          
+
         </div>
       </div>
     </div>
@@ -256,7 +257,8 @@
                 <div class="card-body">
                   <h5 class="card-title">Buquê tropical</h5>
                   <h4 class="card-preco">De: <del>R$206,98</del> <br> Por: R$146,98</h4>
-                  <p class="card-descricao"> Ideal para presentear a pessoa que se ama, com uma imensa diversidade de cores com a pra tropicalidade brasileira.</p>
+                  <p class="card-descricao"> Ideal para presentear a pessoa que se ama, com uma imensa diversidade de
+                    cores com a pra tropicalidade brasileira.</p>
                   <div class="card-botoes">
                     <button class="card-botaoCarrinho">
                       <img src="img/IconeCarrinho.png">
@@ -280,20 +282,262 @@
         </div>
       </div>
     </section>
+    <!-- Grid de cards, com todos os produtos -->
+    <section>
+      <div class="row">
+        <!--primeira linha com 4 cards-->
+        <div class="column">
+          <div class="gridCard">
+            <div class="gridCard-imagens">
+              <img src="img/caminho de mesa 1.jpg">
+            </div>
+            <div class="gridCard-conteudo">
+              <h5>Buquê tropical</h5>
+              <p class=conteudo-preco>R$209,00</p>
+              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
+                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <div class="card-botoes">
+                <button class="card-botaoCarrinho">
+                  <img src="img/IconeCarrinho.png">
+                </button>
+                <button class="card-botaoComprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="gridCard">
+            <div class="gridCard-imagens">
+              <img src="img/caminho de mesa 1.jpg">
+            </div>
+            <div class="gridCard-conteudo">
+              <h5>Buquê tropical</h5>
+              <p class=conteudo-preco>R$209,00</p>
+              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
+                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <div class="card-botoes">
+                <button class="card-botaoCarrinho">
+                  <img src="img/IconeCarrinho.png">
+                </button>
+                <button class="card-botaoComprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="gridCard">
+            <div class="gridCard-imagens">
+              <img src="img/caminho de mesa 1.jpg">
+            </div>
+            <div class="gridCard-conteudo">
+              <h5>Buquê tropical</h5>
+              <p class=conteudo-preco>R$209,00</p>
+              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
+                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <div class="card-botoes">
+                <button class="card-botaoCarrinho">
+                  <img src="img/IconeCarrinho.png">
+                </button>
+                <button class="card-botaoComprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="gridCard">
+            <div class="gridCard-imagens">
+              <img src="img/caminho de mesa 1.jpg">
+            </div>
+            <div class="gridCard-conteudo">
+              <h5>Buquê tropical</h5>
+              <p class=conteudo-preco>R$209,00</p>
+              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
+                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <div class="card-botoes">
+                <button class="card-botaoCarrinho">
+                  <img src="img/IconeCarrinho.png">
+                </button>
+                <button class="card-botaoComprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    
+      <div class="row">
+        <!-- Segunda linha com 4 cards -->
+        <div class="column">
+          <div class="gridCard">
+            <div class="gridCard-imagens">
+              <img src="img/caminho de mesa 1.jpg">
+            </div>
+            <div class="gridCard-conteudo">
+              <h5>Buquê tropical</h5>
+              <p class=conteudo-preco>R$209,00</p>
+              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
+                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <div class="card-botoes">
+                <button class="card-botaoCarrinho">
+                  <img src="img/IconeCarrinho.png">
+                </button>
+                <button class="card-botaoComprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="gridCard">
+            <div class="gridCard-imagens">
+              <img src="img/caminho de mesa 1.jpg">
+            </div>
+            <div class="gridCard-conteudo">
+              <h5>Buquê tropical</h5>
+              <p class=conteudo-preco>R$209,00</p>
+              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
+                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <div class="card-botoes">
+                <button class="card-botaoCarrinho">
+                  <img src="img/IconeCarrinho.png">
+                </button>
+                <button class="card-botaoComprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="gridCard">
+            <div class="gridCard-imagens">
+              <img src="img/caminho de mesa 1.jpg">
+            </div>
+            <div class="gridCard-conteudo">
+              <h5>Buquê tropical</h5>
+              <p class=conteudo-preco>R$209,00</p>
+              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
+                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <div class="card-botoes">
+                <button class="card-botaoCarrinho">
+                  <img src="img/IconeCarrinho.png">
+                </button>
+                <button class="card-botaoComprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="gridCard">
+            <div class="gridCard-imagens">
+              <img src="img/caminho de mesa 1.jpg">
+            </div>
+            <div class="gridCard-conteudo">
+              <h5>Buquê tropical</h5>
+              <p class=conteudo-preco>R$209,00</p>
+              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
+                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <div class="card-botoes">
+                <button class="card-botaoCarrinho">
+                  <img src="img/IconeCarrinho.png">
+                </button>
+                <button class="card-botaoComprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <!-- Terceira linha com 4 cards -->
+        <div class="column">
+          <div class="gridCard">
+            <div class="gridCard-imagens">
+              <img src="img/caminho de mesa 1.jpg">
+            </div>
+            <div class="gridCard-conteudo">
+              <h5>Buquê tropical</h5>
+              <p class=conteudo-preco>R$209,00</p>
+              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
+                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <div class="card-botoes">
+                <button class="card-botaoCarrinho">
+                  <img src="img/IconeCarrinho.png">
+                </button>
+                <button class="card-botaoComprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="gridCard">
+            <div class="gridCard-imagens">
+              <img src="img/caminho de mesa 1.jpg">
+            </div>
+            <div class="gridCard-conteudo">
+              <h5>Buquê tropical</h5>
+              <p class=conteudo-preco>R$209,00</p>
+              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
+                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <div class="card-botoes">
+                <button class="card-botaoCarrinho">
+                  <img src="img/IconeCarrinho.png">
+                </button>
+                <button class="card-botaoComprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="gridCard">
+            <div class="gridCard-imagens">
+              <img src="img/caminho de mesa 1.jpg">
+            </div>
+            <div class="gridCard-conteudo">
+              <h5>Buquê tropical</h5>
+              <p class=conteudo-preco>R$209,00</p>
+              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
+                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <div class="card-botoes">
+                <button class="card-botaoCarrinho">
+                  <img src="img/IconeCarrinho.png">
+                </button>
+                <button class="card-botaoComprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="gridCard">
+            <div class="gridCard-imagens">
+              <img src="img/caminho de mesa 1.jpg">
+            </div>
+            <div class="gridCard-conteudo">
+              <h5>Buquê tropical</h5>
+              <p class=conteudo-preco>R$209,00</p>
+              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
+                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <div class="card-botoes">
+                <button class="card-botaoCarrinho">
+                  <img src="img/IconeCarrinho.png">
+                </button>
+                <button class="card-botaoComprar">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
   </main>
-    <!-- Rodapé do website -->
-    <footer class="rodape">
-      <img class="icones-rodape" src="img/iconeWhatsapp.png">
-      <img class="icones-rodape" src="img/iconeInstagram.png">
-      <img class="icones-rodape" src="img/iconeFacebook.png">
-    </footer>
+  <!-- Rodapé do website -->
+  <footer class="rodape">
+    <img class="icones-rodape" src="img/iconeWhatsapp.png">
+    <img class="icones-rodape" src="img/iconeInstagram.png">
+    <img class="icones-rodape" src="img/iconeFacebook.png">
+  </footer>
 
 
-    <!-- Importação do Script bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
+  <!-- Importação do Script bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
     </script>
 </body>
 
