--- a/index.html
+++ b/index.html
@@ -292,10 +292,9 @@
               <img src="img/caminho de mesa 1.jpg">
             </div>
             <div class="gridCard-conteudo">
-              <h5>Buquê tropical</h5>
-              <p class=conteudo-preco>R$209,00</p>
-              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
-                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <h5>Caminho de mesa tropical</h5>
+              <p class=conteudo-preco>R$300,00</p>
+              <p class="conteudo-descricao">Alegre sua casa. Mais cor e vida no ambiente com esse lindo caminho demesa com  flores tropicais</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -308,13 +307,13 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/caminho de mesa 1.jpg">
+              <img src="img/buque 4.jpeg">
             </div>
             <div class="gridCard-conteudo">
               <h5>Buquê tropical</h5>
-              <p class=conteudo-preco>R$209,00</p>
-              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
-                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <p class=conteudo-preco>R$209,80</p>
+              <p class="conteudo-descricao">Exuberante buquê de flores tropicais, certamente o maior e mais colorido ramalhete de flores que já viu! Um conjunto de cores,
+                 formas e texturas que vai deixar a pessoa querida com grande alegria e entusiasmo.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -327,13 +326,12 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/caminho de mesa 1.jpg">
+              <img src="img/buque 5.jpg">
             </div>
             <div class="gridCard-conteudo">
               <h5>Buquê tropical</h5>
-              <p class=conteudo-preco>R$209,00</p>
-              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
-                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <p class=conteudo-preco>R$259,00</p>
+              <p class="conteudo-descricao">Uma Forma Linda de Presentear Alguém Muito Especial. Surpreenda a pessoa amada da forma mais bonita que se existe =, presenteando.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -346,11 +344,11 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/caminho de mesa 1.jpg">
+              <img src="img/buque 6.jpg">
             </div>
             <div class="gridCard-conteudo">
               <h5>Buquê tropical</h5>
-              <p class=conteudo-preco>R$209,00</p>
+              <p class=conteudo-preco>R$162,80</p>
               <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
                 Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
               <div class="card-botoes">
