--- a/WebSiteFloricultura/index.html
+++ b/WebSiteFloricultura/index.html
@@ -314,8 +314,7 @@
               <h5>Buquê tropical</h5>
               <p class=conteudo-preco>R$209,80</p>
               <p class="conteudo-descricao">Exuberante buquê de flores tropicais, certamente o maior e mais colorido
-                ramalhete de flores que já viu! Um conjunto de cores,
-                formas e texturas que vai deixar a pessoa querida com grande alegria e entusiasmo.</p>
+                ramalhete de flores que já viu! </p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
