--- a/WebSiteFloricultura/index.html
+++ b/WebSiteFloricultura/index.html
@@ -289,7 +289,7 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/caminho de mesa 1.jpg">
+              <img src="../img/caminho de mesa 1.jpg">
             </div>
             <div class="gridCard-conteudo">
               <h5>Caminho de mesa tropical</h5>
@@ -308,7 +308,7 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/buque 4.jpeg">
+              <img src="../img/buque 4.jpeg">
             </div>
             <div class="gridCard-conteudo">
               <h5>Buquê tropical</h5>
@@ -327,7 +327,7 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/buque 5.jpg">
+              <img src="../img/buque 5.jpg">
             </div>
             <div class="gridCard-conteudo">
               <h5>Buquê tropical</h5>
@@ -346,7 +346,7 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/buque 6.jpg">
+              <img src="../img/buque 6.jpg">
             </div>
             <div class="gridCard-conteudo">
               <h5>Buquê tropical</h5>
