--- a/WebSiteFloricultura/index.html
+++ b/WebSiteFloricultura/index.html
@@ -66,6 +66,7 @@
           <div class="apresentacao-rodape">
             <div></div>
             <p>www.floriculturaequador</p>
+ 
           </div>
         </div>
         <div class="modal-caixaLogin">
@@ -82,11 +83,11 @@
           <p id="textoConectarRede">Conectar pelas redes sociais</p>
           <div class="botoesFormaLogin">
             <button class="botaoGoogle">
-              <div><img src="img/IconeLoginGoogle.png"></div>
+              <div><img src="../img/IconeLoginGoogle.png"></div>
               Entre com o google
             </button>
             <button class="botaoFacebook">
-              <div><img src="img/IconeLoginFace.png"></div>
+              <div><img src="../img/IconeLoginFace.png"></div>
               Entre com o Facebook
             </button>
           </div>
@@ -100,14 +101,14 @@
   <!-- Cabeçalho do site -->
   <header class="cabecalho">
     <section class="logo">
-      <img src="img/LogoFloricultura.png">
+      <img src="../img/LogoFloricultura.png">
       <h1>Floricultura Equador</h1>
     </section>
 
     <section class="inputPesquisar">
       <input type="text" id="txtPesquisa" placeholder="Encontre seu produto" />
       <div class="caixaBotao">
-        <img src="img/IconeLupa.png" id="btnPesquisa" alt="Pesquisar" />
+        <img src="../img/IconeLupa.png" id="btnPesquisa" alt="Pesquisar" />
       </div>
     </section>
 
