--- a/WebSiteFloricultura/index.html
+++ b/WebSiteFloricultura/index.html
@@ -140,16 +140,16 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/1.jpg" class="d-block w-100" alt="">
+        <img src="../img/1.jpg" class="d-block w-100" alt="">
       </div>
       <div class="carousel-item">
-        <img src="img/2.jpg" class="d-block w-100" alt="...">
+        <img src="../img/2.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="img/3.jpg" class="d-block w-100" alt="...">
+        <img src="../img/3.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="img/4.jpg" class="d-block w-100" alt="...">
+        <img src="../img/4.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
   </div>
